# cursorControl

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  cursorControl.cpp  cursorControl.h.in  cursorControl_old.cpp  index.html
.github/workflows/: cmake.yml
Controller/: CMakeLists.txt  Controller.h  mousectl.cpp  mousectl.h
Detector/: CMakeLists.txt  Detector.h  cvfacedetect.cpp
Engine/: CMakeLists.txt  Engine.h  engine.cpp
EventProcessor/: CMakeLists.txt  EventProcessor.h  channel.cpp  generator.cpp
FaceDetector/: CMakeLists.txt  FaceDetector.h  cvfacedetect.cpp
InputBuffer/: CMakeLists.txt  InputBuffer.h  videobuf.cpp
